--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "serve": "webpack serve",
     "build": "webpack"
   },
-  "dependencies": {},
+  "dependencies": {
+    "echarts": "^5.1.2"
+  },
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-loader": "7.1.5",
     "babel-preset-es2015": "^6.24.1",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
+    "cross-env": "^7.0.3",
     "css-loader": "^5.2.6",
     "file-loader": "^6.2.0",
     "html-loader": "1.3.2",
